codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__actions__archive_task_confirmation.snap
---
source: tui/src/app/agents_overview_actions_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 72)"
---
  Archive “Current task”?
  This stops any running work in this task and its child agents, then
  archives them. Their history can be restored from the resume picker.

❯ 1. Cancel
  2. Archive task and child agents

  Press enter to confirm or esc to go back
